--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
     border: 2px solid black;
     display: grid;
     grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
-    text-align: center;
 }
 
 .cell {
     border: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
